# Mood_Bot_UoG

./: .gitignore  CMakeLists.txt  README.md  Readme.md  Shopping List  main.cpp  quan_websocket.c  readme.txt
BSP/BSP_5516/: 5516.hpp  CMakeLists.txt
BSP/BSP_Audio/: Audio.cpp  Audio.hpp  Audio_class.hpp  Audio_main.cpp  Audio_register.cpp
BSP/BSP_Camera/: CMakeLists.txt  Camera.cpp  Camera.hpp  Camera_class.hpp  Camera_register.cpp  Interpreter.cpp  Interpreter.h  classification.cpp  classification.h  main.cpp  object_detection.cpp  object_detection.h
BSP/BSP_DHT11/: DHT11.hpp  DHT11_class.hpp  DHT11_register.cpp
BSP/BSP_KEYS/: Key_main.cpp  Key_register.cpp  Keys.hpp
BSP/BSP_LCD/: CMakeLists.txt  LCD.hpp  LCD_main.cpp  LCD_register.cpp
BSP/BSP_LED/: Led.hpp  Led_class.hpp  Led_main.cpp
BSP/BSP_OLED/: CMakeLists.txt  OLED.cpp  OLED.hpp  OLED_class.hpp  OLED_register.cpp
BSP/BSP_PWM/: CMakeLists.txt  gpio_pwm.cpp  gpio_pwm.hpp  pwm_class.hpp  pwm_main.cpp  pwm_register.cpp
BSP/BSP_QM2/: CMakeLists.txt  QM2.hpp  QM2_class.hpp  QM2_main.cpp  QM2_register.cpp
BSP/BSP_RD-03/: CMakeLists.txt  Rd-03.cpp  Rd-03_class.hpp  Rd-03_register.cpp
BSP/BSP_Servo/: CMakeLists.txt  Servo.cpp  ServoPro.cpp  ServoPro_register.cpp
BSP/Temple/: Template.hpp
FaceEmotion_sciCamera/EmotionDetection/: .gitignore  2025-04-16_06-16-调试libcamera2opencv和object-detection-tnn-sdk.md
FaceEmotion_sciCamera/EmotionDetection/src/: Interpreter.cpp  Interpreter.h  Types.h  classification.cpp  main.cpp
FaceEmotion_sciCamera/EmotionDetection/test/: CMakeLists.txt  camera_detection.cpp  camera_detection_changes.md
FaceEmotion_usbCamera/: build.sh  run.sh
FaceEmotion_usbCamera/src/: ._BUILD  ._face_mesh.cpp  BUILD  emotionclassifier.cpp  face_mesh.cpp  face_mesh.h  faces.hpp  gui.cpp  gui.h  main.cpp
FaceEmotion_v0/src/: main.cpp
FaceEmotion_v1/EmotionDetection/: CMakeLists.txt
FaceEmotion_v1/EmotionDetection/src/: classification.h  object_detection.cpp
FaceImg_DataBase/: Dataset.md  README.md
FacialRecog/: Main.cpp
FacialRecog/FaceEmotion_sciCamera/EmotionDetection/src/: object_detection.h
FacialRecog/FaceEmotion_usbCamera/: run.sh
FacialRecog/FaceEmotion_usbCamera/src/: BUILD  bazel.txt  emotionclassifier.cpp  emotionclassifier.h  gui.cpp
SYS_Con/inc/: COM_List.hpp  EventDriven_class.hpp  Getter_Register.hpp  Setter_Register.hpp
SYS_Con/src/: EventBus.cpp  Getter_EventDriven.cpp  SPI_Command.cpp  Setter_EventDriven.cpp  Sys_Functions.cpp
Yq/: App.css  App.jsx  introduction.txt  main.jsx  package-lock.json  quna_App.jsx  server.js
lib/Face/: comfort_face.cpp  faces.hpp  happy_face.cpp  normal_face.cpp  sad_face.cpp  singing_face.cpp  sleep_face.cpp
lib/Fonts/: fonts.h
lib/web/: index.html  mood_logger.cpp  package-lock.json  server.cpp  server.js  setup_npm_service.sh  vite.config.js  websocket.cpp
lib/web/src/: App.jsx  index.css  main.jsx
motor/: gpio_pwm.cpp  gpio_pwm.hpp  main.cpp  readme.txt
project/: Key.cpp  Key.h  LED.cpp  LED.h  MotorDrive.cpp  MotorDrive.h  SYSConfig.h  Template.cpp  Template.h  Tools.cpp  design.txt  tasks.cpp
project/3.14/: main.cpp
project/3.14-4.14/BSP/BSP_5516/: 5516_main.cpp  CMakeLists.txt
project/3.14-4.14/BSP/BSP_Audio/: Audio_main.cpp  CMakeLists.txt
project/3.14-4.14/BSP/BSP_DHT11/: CMakeLists.txt  DHT11_main.cpp
project/3.14-4.14/BSP/BSP_KEYS/: CMakeLists.txt  Key_class.hpp  Key_main.cpp  Key_register.cpp  Keys.cpp  Keys.hpp
project/3.14-4.14/BSP/BSP_LCD/: CMakeLists.txt  (+4 more)
project/3.14-4.14/BSP/BSP_LED/: CMakeLists.txt  Led.cpp  Led.hpp  Led_class.hpp  Led_main.cpp  Led_register.cpp
project/3.14-4.14/BSP/BSP_OLED/: CMakeLists.txt  Frame.cpp  OLED.cpp  OLED.hpp  OLED_Config.cpp  OLED_class.hpp  OLED_main.cpp
project/3.14-4.14/BSP/BSP_QM2/: CMakeLists.txt  QM2_main.cpp
project/3.14-4.14/BSP/BSP_RD-03/: CMakeLists.txt  Rd-03_main.cpp
project/3.14-4.14/BSP/BSP_Servo/: CMakeLists.txt  Servo.cpp  Servo.hpp  Servo_class.hpp  Servo_main.cpp
project/3.14-4.14/SYS_Con/: EventDriven_class.hpp  Getter_EventDriven.cpp  Getter_Register.hpp  I2C_Command.cpp  SPI_Command.cpp  SYS.hpp  Setter_EventDriven.cpp  Setter_Register.hpp  Sys_Functions.cpp
project/3.14/GeneralTools/: tasks.cpp
project/4.14-4.21/: CMakeLists.txt  main.cpp
project/4.14-4.21/BSP/BSP_5516/: 5516.cpp  5516_class.hpp  5516_main.cpp  5516_register.cpp
project/4.14-4.21/BSP/BSP_Audio/: Audio.cpp  Audio.hpp  Audio_register.cpp  CMakeLists.txt
project/4.14-4.21/BSP/BSP_Camera/: Camera.cpp  Camera.hpp  Camera_class.hpp  Camera_register.cpp  Interpreter.h  Types.h  cameramain.cpp  classification.h  image_utils.h  object_detection.h
project/4.14-4.21/BSP/BSP_DHT11/: CMakeLists.txt  DHT11.cpp  DHT11_main.cpp  DHT11_register.cpp
project/4.14-4.21/BSP/BSP_KEYS/: CMakeLists.txt  Key_class.hpp  Keys.cpp
project/4.14-4.21/BSP/BSP_LCD/: LCD.cpp  LCD_Config.cpp  LCD_register.cpp
project/4.14-4.21/BSP/BSP_LED/: CMakeLists.txt  Led.cpp  Led_register.cpp
project/4.14-4.21/BSP/BSP_OLED/: OLED_Config.cpp
project/4.14-4.21/BSP/BSP_PWM/: CMakeLists.txt  gpio_pwm.cpp  gpio_pwm.hpp  pwm_class.hpp  pwm_main.cpp  pwm_register.cpp
project/4.14-4.21/BSP/BSP_QM2/: QM2.cpp  QM2.hpp  QM2_class.hpp
project/4.14-4.21/BSP/BSP_RD-03/: Rd-03.hpp  Rd-03_main.cpp
project/4.14-4.21/BSP/BSP_Servo/: Servo.hpp  Servo_class.hpp  Servo_main.cpp  Servo_register.cpp
project/4.14-4.21/BSP/Temple/: Template_class.hpp
project/4.14-4.21/SYS_Con/inc/: COM_List.hpp  EventBus.hpp  Getter_Register.hpp  SYS.hpp
project/4.14-4.21/SYS_Con/src/: I2C_Command.cpp
project/4.14-4.21/lib/Face/: angry_face.cpp  think_face.cpp
project/4.14-4.21/lib/Fonts/: fonts.h
project/GeneralTools/: SYSConfig.h  Tools.cpp
quanyuan_mood_web/: README.md  index.html  mood_logger  mood_logger.c  package.json  server.c  server.cpp  server.js  setup_npm_service.sh  vite.config.js  websocket  websocket.cpp
quanyuan_mood_web/public/: index.html
quanyuan_mood_web/src/: App.jsx  index.css  main.jsx
servo/: Servo.cpp  Servo.hpp  Servo_class.hpp  Servo_main.cpp
sevor/: readme.txt
(+16 files in other folders)
